<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fillViewport="true"
    android:overScrollMode="always">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Espacio de arriba con FrameLayout -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#F5F5F5"
            android:minHeight="120dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_crear_cuenta_registro"
                    android:textColor="#6266F1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivMq"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:importantForAccessibility="no"
                    app:srcCompat="@drawable/nombre_master_quiz" />

            </LinearLayout>

        </FrameLayout>

        <!-- Contenedor con gradiente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background_rounded"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="40dp"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp">

            <!-- Nombre -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_nombre_registro"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/et_nombre_registro"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#666666"
                android:textColorHint="#AAAAAA"
                android:textSize="16sp" />

            <!-- Email -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_correo_registro"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/et_correo_registro"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#666666"
                android:textColorHint="#AAAAAA"
                android:textSize="16sp" />

            <!-- Contraseña -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_password_registro"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/et_password_registro"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#666666"
                android:textColorHint="#AAAAAA"
                android:textSize="16sp" />

            <!-- Confirmar contraseña -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_confirmar_password_registro"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/et_reescribe_password_registro"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="#666666"
                android:textColorHint="#AAAAAA"
                android:textSize="16sp" />

            <!-- Selección de rol -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/tv_rol_registro"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroupRol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioEstudiante"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/tv_rol_estudiante"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/radioProfesor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/tv_rol_profesor"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>

            <!-- Botón registrar -->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="#fab441"
                android:elevation="4dp"
                android:text="@string/tv_btn_registrarse"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="15dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>